# WXDown-Web-RAG

./: .gitignore  README.md  pyproject.toml  requirements.txt  retrieval-examples-V1_0.md  retrieval-examples.md
configs/: env.example  wxchatrag.json
docs/: chunk-strategies.md
src/wxchatrag/: __init__.py  cli.py  exceptions.py  ingest.py  manifest.py  rag_query.py  services.py  settings.py  wxhub_loader.py
src/wxchatrag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/wxchatrag/chunking/: __init__.py  chunk_strategy.py  fixed_splitter.py  hierarchical_splitter.py  semantic_splitter.py  sentence_splitter.py  sliding_window_splitter.py
src/wxchatrag/embeddings/: __init__.py  bge_embeddings.py
src/wxchatrag/filtering/: __init__.py
src/wxchatrag/rerank/: __init__.py  cross_encoder_rerank.py  reranker.py
src/wxchatrag/retrieval/: __init__.py  bm25_store.py  hybrid_retriever.py  rrf_fusion.py
tests/: __init__.py  test_chinese_font_display.ipynb  test_chunk_strategy_comparison.ipynb  test_hybrid_retrieval_rerank_performance.ipynb  test_pdf_loading_cleaning.ipynb  test_placeholder.py  test_semantic_chunking_debug.ipynb
